--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ html {
         <h2>RAKESH SHARMA</h2>
         <p class="title">MANAGEMENT</p>
         <p>Connecting the middle and low-income groups and providing world-class service.</p>
-        <p>rakesh02@example.com</p>
+        <p>rakesh02@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
@@ -130,7 +130,7 @@ html {
         <h2>SHUBHAM KUMAR</h2>
         <p class="title">PAYMENT MANAGEMENT</p>
         <p>Connecting the middle and low-income groups and providing world-class service..</p>
-        <p>shubhamkumar321@example.com</p>
+        <p>shubhamkumar321@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
@@ -143,7 +143,7 @@ html {
         <h2>KRISHNA RAJBHAR</h2>
         <p class="title">WEB DESINER</p>
         <p>Connecting the middle and low-income groups and providing world-class service.</p>
-        <p>ssg.web@example.com</p>
+        <p>ssg.web@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
